done my revision

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -70,7 +70,7 @@ Jets are collimated sprays of hadrons that emerge from high energy quarks and gl
 
 At the lowest energies, jets are dominated by non-perturbative effects.  While there has been significant progress in understanding jet formation when fixed-order or resummed perturbation theory is accurate, there has been much less progress outside these regions of phase space.  While such contributions are small for many observables of interest, they are relevant for any precision program involving hadronic final states.  One example is the determination of the strong coupling constant, $\alpha_s$, from hadronic event shapes~\cite{Abbate:2010xh,Hoang:2015hka,TheALEPHCollaboration2004,DELPHICollaboration1997,Abdallah:2004xe,Biebel:1999zt,Abbiendi:2004qz,Buskulic:1992hq}.   After lattice determinations, the most precise extractions of $\alpha_s$ use thrust and the $C$-parameter from $e^+e^-$ data.  One of the biggest challenges of this extraction is that the non-perturbative corrections are nearly degenerate with changes to $\alpha_s$~\cite{Abbate:2010xh}.  The 2017 Les Houches report on jets studied the possibility of using jet substructure at the LHC to determine $\alpha_s$~\cite{Bendavid:2018nar}.  A key ingredient to this study is jet grooming, which is a set of tools to systematically remove soft and wide angle radiation within a jet.  Well-designed grooming algorithms allow for precise theory predictions of certain observables in part because the magnitude and the onset of non-perturbative effects can be parametrically suppressed with respect to the un-groomed case.  While jet grooming may not be enough to eliminate the need to estimate non-perturbative effects, grooming may provide a unique opportunity to isolate these effects for further study.   While the perturbative regions of phase space have received significant attention from the community~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}, the non-perturbative regions have only recently been investigated~\cite{Hoang:2019ceu}.   One of the goals of this report is to explore the non-perturbative region of groomed jets using phenomenological tools for guidance. 
 
-Both perturbative and non-perturbative regions of phase space at low energy can be important inputs to Parton Shower Monte Carlo (PSMC) parameter tuning.  In particular, there is a need for data enriched in gluon jets as many of the existing tunes are either based solely on or are anchored based on $e^+e^-$ data.  While those data are free from many nuisances like the underlying event, they are dominated by quark jets.  Various tuning campaigns at the LHC have found potential sources of tension between tunes that use jet substructure from the LHC and those that use jet and event shapes from LEP~\cite{ATL-PHYS-PUB-2014-021,Aad:2016oit}.  It is therefore critical to collect new measurements with unique and overlapping sensitivity to a variety of phase space regions.  The community repository for storing measurements is HepData~\cite{Buckley:2010jn,Maguire:2017ypu} and the standard for encoding an analysis for reinterpretation is Rivet~\cite{Buckley:2010ar}.  In the preparation of this report, new routines have been added to the existing databases and a list of jet substructure measurements from the LHC experiments has been tabulated.
+Both perturbative and non-perturbative regions of phase space at low energy can be important inputs to Parton Shower Monte Carlo (PSMC) parameter tuning.  In particular, there is a need for data enriched in gluon jets as many of the existing tunes are either based solely on or are anchored based on $e^+e^-$ data.  While those data are free from many nuisances like the underlying event, they are dominated by quark jets.  Various tuning campaigns at the LHC have found potential sources of tension between tunes that use jet substructure from the LHC and those that use jet and event shapes from LEP~\cite{ATL-PHYS-PUB-2014-021,Aad:2016oit}.  It is therefore critical to collect new measurements with unique and overlapping sensitivity to a variety of phase space regions.  The community repository for storing measurements is HepData~\cite{Buckley:2010jn,Maguire:2017ypu} and the standard for encoding an analysis for reinterpretation is \textsc{Rivet}~\cite{Buckley:2010ar}.  In the preparation of this report, new routines have been added to the existing databases and a list of jet substructure measurements from the LHC experiments has been tabulated.
 
 While many aspects of PSMC programs are built on phenomenological models that must be tuned to data, there are also a variety of components that are based on fundamental aspects of strong interactions and can be systematically improved.  Various MC programs such as \textsc{Dire}, \textsc{Vincia}, and \textsc{Deductor} include various subleading resummation, helicity, and color corrections.  In particular, the \textsc{Dire} program, which is a plugin to both \textsc{Pythia} or \textsc{Sherpa} now includes all of the next-to-leading order components of the QCD splitting functions including the triple-collinear and double-soft splittings.   The 2017 Les Houches report briefly discussed an investigation of standard jet substructure observables (such as the two-prong tagger $N_2$~\cite{Moult:2016cvt}) to the triple collinear splitting function~\cite{Bendavid:2018nar}.  A non-exhaustive list of such observables showed no sensitivity to this splitting function.  In order to know if any jet observable is sensitive to the extended physics modelling, deep neural network classifiers were constructed using the full observable jet phase space (kinematics and particle types).   This study confirmed that the triple-collinear splitting function is essentially non-observable, but the neural networks were able to significantly detect the double-soft splitting function.  Future work is required to construct simple observables that may become near-future measurements for probing this in data.
 
@@ -128,7 +128,7 @@ The non-perturbative region is often avoided, but these studies indicate that th
 \subsection{Probing higher-order effects in PSMC}
 \label{sec:jets:psmc}
 
-\subsubsection{Triple Collinear Splitting Functions}
+%\subsubsection{Triple Collinear Splitting Functions}
 
 \input{triplecollinearNN.tex}
 
