--- a/proceedings/triplecollinearNN.tex
+++ b/proceedings/triplecollinearNN.tex
@@ -1,7 +1,7 @@
 
 This study aims at exposing, with the help of energy flow 
 networks~\cite{Komiske:2018cqr}, new features of jets induced by higher-order
-corrections to parton showers, using the Dire parton shower~\cite{Hoche:2015sya}
+corrections to parton showers, using the \textsc{Dire} parton shower~\cite{Hoche:2015sya}
 as a test case.
 
 Parton shower programs are an an important aspect
@@ -54,7 +54,7 @@ In~\cite{Hoche:2017iem}, triple-collinear corrections from diagrams
 similar to~\ref{fig:jets:np:triplecollineardiagrams2} were considered, with
 the difference that instead of the primary parton (indicated with a double 
 line), one of the quarks in the loop was considered as ``hard". Such
-configurations give, upon integration, give rise to the flavor-changing 
+configurations give rise, upon integration, to the flavor-changing 
 DGLAP kernels $P_{qq'}$ and $P_{q\bar q}$. We will call this 
 ``triple-collinear" correction. The calculation of these corrections has
 helped define a method to use the overlap with lowest order to construct 
@@ -73,7 +73,7 @@ results separately, for triple-collinear, and for double-soft corrections.}.
 The numerical effect of these double-soft corrections is expected to be appreciable.
 
 In this study, we use the implementation of the triple-collinear and 
-double-soft corrections in Dire to produce NLO pseudo-data, with the aim
+double-soft corrections in \textsc{Dire} to produce NLO pseudo-data, with the aim
 of highlighting the characteristic new features of either correction.
 
 Events are treated as sets of particles, with each particle $p_i$ specified by its momentum $\vec p_i^\mu$, mass, and particle-type.
